# rules_python

./: .bazelrc  CHANGELOG.md  MODULE.bazel
docs/: BUILD.bazel
docs/sphinx/: pip.md  pypi-dependencies.md
examples/bzlmod/: BUILD.bazel  MODULE.bazel  pyproject.toml
examples/bzlmod/libs/my_lib/: __init__.py
python/: versions.bzl
python/config_settings/: BUILD.bazel
python/pip_install/: pip_repository.bzl
python/pip_install/private/: generate_group_library_build_bazel.bzl  generate_whl_library_build_bazel.bzl
python/pip_install/tools/wheel_installer/: wheel.py
python/private/: BUILD.bazel  config_settings.bzl  dist_config_settings.bzl  internal_config_repo.bzl  parse_requirements.bzl  parse_requirements_add_dists.bzl  parse_whl_name.bzl  pip_config_settings.bzl  pip_flags.bzl  pip_repo_name.bzl  pypi_index.bzl  python.bzl  python_register_toolchains.bzl  python_repositories.bzl  pythons_hub.bzl  render_pkg_aliases.bzl  text_util.bzl  toolchains_repo.bzl  whl_repo_name.bzl  whl_target_platforms.bzl
python/private/bzlmod/: BUILD.bazel  pip.bzl  pip_repository.bzl
python/private/pypi/: BUILD.bazel  bzlmod.bzl  env_marker_feature_flag.bzl  extension.bzl  parse_requirements.bzl  parse_simpleapi_html.bzl  pep508.bzl  pkg_aliases.bzl  simpleapi_download.bzl
python/private/pypi/whl_installer/: platform.py
tests/pip_hub_repository/dist_config_settings/: BUILD.bazel  select_dist_test.bzl
tests/pip_hub_repository/render_pkg_aliases/: BUILD.bazel  render_pkg_aliases_test.bzl  whl_select_dict_test.bzl
tests/pip_install/whl_library/: generate_build_bazel_tests.bzl
tests/private/pip_config_settings/: pip_config_settings_tests.bzl
tests/private/pip_repo_name/: pip_repo_name_tests.bzl
tests/private/whl_target_platforms/: select_whl_tests.bzl
tests/pypi/: README.md  requirements.in  requirements.txt
tests/pypi/env_marker_feature_flag/: BUILD.bazel  env_marker_feature_flag_tests.bzl
tests/pypi/extension/: extension_tests.bzl
tests/pypi/pep508/: evaluate_tests.bzl  todo.bzl
tests/python/: python_tests.bzl
tests/support/: BUILD.bazel
