[project]
name = "bzlmod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wheel",
    "websockets",
    "requests~=2.25.1",
    "s3cmd~=2.1.0",
    "yamllint>=1.28.0",
    "tabulate~=0.9.0",
    "pylint~=2.15.5",
    "pylint-print",
    "python-dateutil>=2.8.2",
    "sphinx",
    "sphinxcontrib-serializinghtml",
    "colorama",
]
